test/libsolidity/syntaxTests/globalFunctions/sha3_no_call.sol
contract C
{
	function f(bytes memory data) public pure {
		sha3;
	}
}
// ----
// TypeError 3557: (60-64): "sha3" has been deprecated in favour of "keccak256".
